Implement list of hotels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">OTT</string>
+    <string name="one_flight_pattern">%d вараинт перелёта</string>
+    <string name="two_four_flight_pattern">%d вараинта перелёта</string>
+    <string name="five_more_flight_pattern">%d вараинтов перелёта</string>
+    <string name="price">от %d руб.</string>
 </resources>
